Fix SVG image not rendering in Chrome and Firefox See https://stackoverflow.com/questions/54453987/did-chrome-72-break-dataimage-svgxmlutf8-for-css-background-svgs

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -435,7 +435,7 @@ header .container {
     background-position: 0 5px;
     background-repeat: no-repeat;
     padding-left: 2rem;
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='#08A4CC' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.27 14.73a3.1 3.1 0 0 1 0-4.39L6.1 7.52 4.76 6.17 1.93 9A5 5 0 0 0 9 16.07l2.83-2.83-1.35-1.34-2.82 2.83a3.1 3.1 0 0 1-4.39 0zm3.6-2.2l5.67-5.65-1.42-1.42-5.66 5.66 1.42 1.42zM9 1.94L6.17 4.76 7.52 6.1l2.82-2.83a3.1 3.1 0 0 1 4.39 4.39l-2.83 2.82 1.34 1.35L16.07 9A5 5 0 0 0 9 1.93z'/%3E%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='%2308A4CC' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.27 14.73a3.1 3.1 0 0 1 0-4.39L6.1 7.52 4.76 6.17 1.93 9A5 5 0 0 0 9 16.07l2.83-2.83-1.35-1.34-2.82 2.83a3.1 3.1 0 0 1-4.39 0zm3.6-2.2l5.67-5.65-1.42-1.42-5.66 5.66 1.42 1.42zM9 1.94L6.17 4.76 7.52 6.1l2.82-2.83a3.1 3.1 0 0 1 4.39 4.39l-2.83 2.82 1.34 1.35L16.07 9A5 5 0 0 0 9 1.93z'/%3E%3E%3C/svg%3E");
 
     a {
       color: $dark;
